test/compiler/neg/BlockedAwait2.abs
module BlockedAwait2;

interface I {
    Unit m();
}

class C implements I {
    Int x = 0;
    Unit m() {
        await (x==2);
    }
}


{
    I o = new local C();
    o.m();
}